k8-cluster/overlay/demo-app/demo-app-volume-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app 
  labels:
    app: demo-app
    app-group: demo
    tier: backend
spec:
  selector:
    matchLabels:
      app: demo-app
  template:
    spec:
      volumes:
      # - name: demo-logs-nfs
      #   persistentVolumeClaim:
      #     claimName: demo-pv
      # - name: tz-config
      #   hostPath:
      #     path: /usr/share/zoneinfo/Asia/Calcutta
