k8-cluster/overlay/demo-app/demo-resource-limits-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app 
  labels:
    app: demo-app
    app-group: demo
    tier: backend
spec:
  selector:
    matchLabels:
      app: demo-app
  template:
    spec:
      containers:
        - name: demo-app
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
